assets/dev/scss/frontend/widgets/icon-list.scss
//
// Icon List
//
.elementor-widget-icon-list {

	.elementor-icon-list-items {
		list-style-type: none;
		margin: 0;
		padding: 0;
	}

	.elementor-icon-list-item {
		margin: 0;
		padding: 0;
		position: relative;

		&:after {
			position: absolute;
			bottom: 0;
			width: 100%;
		}

		&, a {
			display: flex;
		}

		a {
			width: 100%;
		}
	}

	.elementor-icon-list-text {
		align-self: center;
		@include padding-start(5px);
	}

	.elementor-icon-list-icon {
		text-align: center;

		i {
			vertical-align: middle;
		}
	}
}

